--- a/style/cart-form.css
+++ b/style/cart-form.css
@@ -6,14 +6,18 @@ grid-template-rows: auto auto auto ;
 .your-cart
 {
     text-align: center;
+    color:rgb(0, 0, 0);
+    background: #ffffff;
     padding: 5vw 0vw 5vw;
-    font-size: 3vw;
+    font-size: 5vw;
+    margin: 3vw 1vw 3vw;
+
     grid-row:1/2;
 }
 #item-quantity
 {
     padding-top:1vw;
-    font-size:3vw;
+    font-size:4vw;
 }
 .products-wrapper
 {
@@ -21,9 +25,12 @@ grid-template-rows: auto auto auto ;
 }
 .products
 {
+    
     display:grid;
+    padding-top:5vw;
     grid-template-columns: 30% 70%;
     grid-row:2/3;
+    padding-bottom: 5vw;
   
 }
 .picture
@@ -67,21 +74,365 @@ grid-template-rows: auto auto auto ;
 {
     color:red;
 }
+
 .summary
 {
-    
-    padding-left: 5vw;
-    font-size: 20pt;
+    border: solid rgb(179, 179, 179) 0.3vw;
+    background: #f8f8f8;
+    color: rgb(0, 0, 0);
+    display:grid;
+    padding: 3vw 5vw 3vw;
+    margin: 3vw 2vw 3vw;
+    font-size: 4vw;
+    line-height: 12vw;
     grid-row:3/4;
-    line-height: 6vw;
+    grid-template-rows: auto auto auto auto auto;
     font-weight: bold;
+
 }
 .subtotal
+{   display:grid;
+    grid-row: 1/2;
+    grid-template-columns: auto auto;
+}
+.subtotal-left
+{   
+    text-align: left;
+    grid-column: 1/2;
+}
+.subtotal-right
 {
-
+    text-align: right;
+    grid-column: 2/3;
 }
 .discount
+{   
+    display:grid;
+    line-height: 6vw;
+    grid-row: 2/3;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto;
+    padding-top: 1vw;
+    padding-bottom: 2vw;
+}
+
+
+.description
 {
+    padding-top:5vw;
+    grid-row:2/3;
+    grid-column: 1/3;
+    font-size: 3vw;
+}
+
+
+.discount-left
+{   
+    
+    text-align: left;
+    grid-row:1/2;
+    grid-column: 1/2;
+}
+.discount-right
+{
+    grid-row: 1/2;
+    text-align: right;
+    grid-column: 2/3;
+}
+
+.discount .pull-right
+{
+   font-size: 4vw;
+}
+#discount-text
+{
+    background-color:  rgb(255, 255, 255); /* Green */
+    color: rgb(255, 255, 255);
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3vw;
+    border: solid rgb(179, 179, 179) 0.3vw;
+    margin: 4px 2px;
+    width: 27vw;
+    height: 5vw;
+}
+#discount-button
+{
+    background-color: rgb(9, 2, 36); /* Green */
+    color: rgb(255, 255, 255);
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3vw;
+    border: solid rgb(179, 179, 179) 0.3vw;
+    margin: 4px 2px;
+    height:6vw;
+}
+.form-control {
+    font-size: 16px;
+    width: 33.5vw;
+    height: 5vw;
 
 }
+
+  .discount .discount-left ,.discount .discount-right
+{
+    display: block;
+
+    cursor: pointer;
+    transition: 0.3s;
+}
+
 .total
+{   
+    border-top: 1px solid rgb(202, 200, 200);
+    font-size:5vw;
+    display:grid;
+    grid-row: 3/4;
+    grid-template-columns: auto auto;
+    padding-top: 2vw;
+}
+.total-left
+{   
+    text-align: left;
+    grid-column: 1/2;
+}
+.total-right
+{
+    text-align: right;
+    grid-column: 2/3;
+}
+.discount a 
+{
+    font-size:3vw;
+    font-weight: normal;
+}
+.checkout
+{
+    text-align: center;
+    padding-top:5vw;
+    grid-row: 4/5;
+}
+.checkout-button {
+    background-color: rgb(49, 40, 99); 
+    border: none;
+    color: white;
+    width: 85vw;
+    height: 10vw;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 4vw;
+    cursor: pointer;
+}
+@media screen and (min-width: 1028px)
+{
+  
+    .body{
+        display:grid;
+        grid-template-rows: auto auto auto ;
+        }
+        
+        .your-cart
+        {
+            text-align: center;
+            color:rgb(0, 0, 0);
+            background: #ffffff;
+            padding: 5vw 0vw 5vw;
+            font-size: 5vw;
+            margin: 3vw 1vw 3vw;
+        
+            grid-row:1/2;
+        }
+        #item-quantity
+        {
+            padding-top:1vw;
+            font-size:4vw;
+        }
+        .products-wrapper
+        {
+            display:grid;
+        }
+        .products
+        {
+            
+            display:grid;
+            padding-top:5vw;
+            grid-template-columns: 30% 70%;
+            grid-row:2/3;
+            padding-bottom: 5vw;
+          
+        }
+        .picture
+        {   
+            text-align: center;
+            padding-bottom:5vw;
+            grid-column: 1/2;
+        }
+        
+        .picture img
+        {
+            height: 20vw;
+            width:20vw;
+            
+        }
+        .information
+        {
+            grid-column:2/3;
+            background:white;
+        }
+        .product-name
+        { 
+            font-size:3vw;
+            font-weight: bold;
+            padding-bottom: 1vw;
+            border-bottom: 1px solid rgb(202, 200, 200);
+        }
+        .product-price
+        {
+            padding-top:1vw;
+            font-size:5vw;
+            padding-bottom: 1vw;
+            font-weight: bolder;
+        }
+        .product-quantity
+        {
+           
+        }
+        
+        .remove-btn
+        {
+            color:red;
+        }
+        
+        .summary
+        {
+            border: solid rgb(179, 179, 179) 0.3vw;
+            background: #f8f8f8;
+            color: rgb(0, 0, 0);
+            display:grid;
+            padding: 50px 50px 50px;
+            margin: 150px 400px 150px;
+            font-size: 25pt;
+            line-height: 5pt;
+            grid-row:3/4;
+            grid-template-rows: auto auto auto auto auto;
+            font-weight: bold;
+        
+        }
+        .discount
+        {   
+            display:grid;
+            line-height: 25pt;
+            grid-row: 2/3;
+            grid-template-rows: auto auto;
+            grid-template-columns: auto auto;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+        
+        
+        .description
+        {
+            padding-top:25px;
+            grid-row:2/3;
+            grid-column: 1/3;
+            font-size: 25pt;
+        }
+        
+        
+        .discount-left
+        {   
+            
+            text-align: left;
+            grid-row:1/2;
+            grid-column: 1/2;
+        }
+        .discount-right
+        {
+            grid-row: 1/2;
+            text-align: right;
+            grid-column: 2/3;
+        }
+        
+        .discount .pull-right
+        {
+           font-size: 25pt;
+        }
+        #discount-text
+        {
+            background-color:  rgb(255, 255, 255); /* Green */
+            color: rgb(255, 255, 255);
+            text-align: left;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 3vw;
+            border: solid rgb(179, 179, 179) 0.3vw;
+            margin: 4px 2px;
+            width: 27vw;
+            height: 5vw;
+        }
+        #discount-button
+        {
+            background-color: rgb(9, 2, 36); /* Green */
+            color: rgb(255, 255, 255);
+            text-align: left;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 3vw;
+            border: solid rgb(179, 179, 179) 0.3vw;
+            margin: 4px 2px;
+            height:6vw;
+        }
+        .form-control {
+            font-size: 16px;
+            width: 100px;
+            height: 20px;
+        
+        }
+        
+          .discount .discount-left ,.discount .discount-right
+        {
+            display: block;
+        
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        
+        .total
+        {   
+            border-top: 1px solid rgb(202, 200, 200);
+            font-size:25pt;
+            display:grid;
+            grid-row: 3/4;
+            grid-template-columns: auto auto;
+            padding-top: 20px;
+        }
+        .total-left
+        {   
+            text-align: left;
+            grid-column: 1/2;
+        }
+        .total-right
+        {
+            text-align: right;
+            grid-column: 2/3;
+        }
+        .discount a 
+        {
+            font-size:20pt;
+            font-weight: normal;
+        }
+        .checkout
+        {
+            text-align: center;
+            padding-top:50px;
+            grid-row: 4/5;
+        }
+        .checkout-button {
+            width: 500px;
+            height: 100px;
+            font-size: 26pt;
+        }
+}
