--- a/category/style/style.css
+++ b/category/style/style.css
@@ -16,7 +16,60 @@
     height: 5vw;
 }
 
-.list
+.cate-menu > ul
+{
+    background-color: #762C8E;
+    color: #ffffff;
+    font-size: 3.5vw;
+    border-radius: 3vw;
+    margin-left: 2vw;
+    margin-right: 2vw; 
+    box-shadow: 0 1vw 2vw 0 rgba(0,0,0,.25); 
+}
+
+.cate-menu > ul > li
+{
+    list-style-type: none;
+    display: inline-block;
+    padding: 2vw 5vw 2vw 5vw;
+    position: relative;
+}
+
+.cate-menu > ul > li:hover
+{
+    background-color: #3B1647; 
+}
+
+ul.sub-menu-cate
+{
+    position: absolute;
+    background-color: rgb(143, 57, 172); 
+    list-style-type: none;
+    width: 30vw;
+    padding-left: 0vw; 
+    margin-left: -5vw;
+    margin-top: 2vw;
+    opacity: 0; 
+}
+
+ul.sub-menu-cate li
+{
+    padding-left: 5vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+}
+
+.cate-menu li:hover .sub-menu-cate
+{
+    opacity: 1;
+}
+
+ul.sub-menu-cate li:hover
+{
+    background-color: #762C8E; 
+}
+
+.list   
 {
     display: grid;
     padding-top:2vw;
@@ -30,7 +83,7 @@
     background: #f8f8f8;
     margin: 1vw 2.5vw 4vw ;
     overflow: hidden;
-    border-radius: 4px;
+    border-radius: 10px;
     box-shadow: 0 1vw 2vw 0 rgba(0,0,0,.25); 
 }
 
@@ -55,14 +108,14 @@
 .buy-now-btn
 {
     grid-column: 3/4;
-    background-color: rgb(182, 67, 67);
+    background-color:  #762C8E;
     color: white;
     margin-top: 5vw;
     padding: 2vw 3vw;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 4vw;
+    font-size: 3.5vw;
     height: 90%;
     border-radius:6px; 
     cursor: pointer;
@@ -70,7 +123,7 @@
 }
 .buy-now-btn:hover
 {
-    background-color: rgb(207, 84, 84);
+    background-color:  rgb(143, 57, 172);
 }
 
 .pro-name
@@ -115,11 +168,16 @@
     cursor: pointer;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,.25);
 }
+
 .button:hover
 {
-    background-color: rgb(143, 57, 172);
-    
-  
+    background-color: rgb(143, 57, 172); 
+}
+
+.buy-now-btn img 
+{
+    height: 5vw;
+    width: 5vw;
 }
 
 @media screen and (min-width: 1024px)
@@ -143,24 +201,118 @@
         height: 30px;
     }
 
-    .list
-    {
-        grid-row: 2/3;
-        display: grid;
-        grid-template-rows: auto auto auto auto auto;
-
-    }
-
     .list-wrapper
     {
-        text-align:center;
-        justify-content: center;
-        align-content: center;
-        border: 2px;
-        display:flex;
-        border: solid black 1px;
-        padding: 10px 50px 10px;
-        margin: 12px;
+        margin: 10px 200px 10px 200px ;
     }
+
+    .list
+    {
+        display: grid;
+        grid-template-columns: 17% 73% 10%;
+        padding-top: 10px;
+        padding-bottom: 2px;
+        max-width: 100%;
+        padding: 2px;
+        margin: 2px 10px 2px 10px ;
+        border-radius: 10px;
+        
+    }
+
+    .pic
+    {
+        padding-top: 10px;
+        margin-right: 160px;
+    }
+
+    .pic img
+    {
+        height: 150px;
+        width: 150px;
+        border-radius: 5px;
+    }
+
+    .buy-now-btn
+    {
+        margin-top: 130px;
+        padding: 2px 3px;
+        font-size: 15px;
+        height: 90%;
+        border-radius:6px; 
+    }
+
+    .buy-now-btn img 
+    {
+        height: 15px;
+        width: 15px;
+    }
+
+    .pro-name
+    {
+        font-size: 30px;
+        text-decoration: none;
+        padding-bottom:3px;
+        margin-left: 4px;  
+    }
+
+    .pro-price
+    {
+        padding-top:3px;
+        font-size:20px;
+        padding-bottom: 3px;
+        margin-left: 4px; 
+    }
+
+
+    .bottom-cate
+    {
+        margin: 5px 10px 5px ;
+    }
+
+    .button 
+    {
+        margin-top: 4px;
+        margin-bottom: 10px;
+        padding: 12px 12px ;
+        font-size: 15px;
+        height: 20px;
+        border-radius:5px;       
+    }
+
+    .cate-menu > ul 
+    {
+        font-size: 20px;
+        border-radius: 7px;
+        margin-left: 25px;
+        margin-right: 25px; 
+        text-align :center; 
+    }
+
+    .cate-menu > ul > li
+    {
+    
+        padding: 8px 150px 8px 210px;
+        text-align :center; 
+    }
+
+    ul.sub-menu-cate
+    {
+        text-align :center; 
+        width: 500px;
+        padding-left: 0px; 
+        margin-left: -210px;
+        margin-top: 8px;
+        height: 200px;
+        overflow: auto; 
+    }
+    
+    ul.sub-menu-cate li
+    {
+        padding-left: 10px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+    }
+
+
 }
 
